client/src/app/donate/donate.component.css
label:not(.perishable-label) {
    font-weight: bold;
    font-size: 25px;
}

input[type=checkbox]
{
  /* Double-sized Checkboxes */
  transform: scale(2);
  -ms-transform: scale(2); /* IE */
  -moz-transform: scale(2); /* FF */
  -webkit-transform: scale(2); /* Safari and Chrome */
  -o-transform: scale(2); /* Opera */
  padding: 10px;
  margin-left: 10px;
}

#perishable-yes {
    margin-right: 20px;
}

md-form-field, md-input-container {
    width: 100%;
}

.inline-error, md-form-field, md-input-container {
    font-size: 20px;
}

:host ::ng-deep .mat-form-field-infix {
    border: none;
}

.inline-error {
    line-height: 20px;
    vertical-align: top;
}

